# sandbox

./: README.md  README.rst
algo/algo/: dfs.cpp  value_iteration.py
algo/algo/goal_constraints/: nn.py
cpp/: CMakeLists.txt
cpp/include/: rvo.h  template_recursion.h
cpp/include/meta/: bfs.h  gridworld.h
cpp/main/: bfs.cpp  boost.cpp  constexpr.cpp  cuda.cu  rvo.cpp  xtensor.cpp
cpp/src/: function.cpp  rvo.cpp  template_recursion.cpp  variant.cpp  xtensor.cpp
cpp/src/meta/: gridworld.cpp  planning.cpp
julia/src/: hello_world.jl  tutorial.jl
maths/python/: contracting-linear-transforms.ipynb
ml/ml/: covariance_matrix_and_svd.ipynb  density_estimation.py  gaussian_process_regression.py
ml/rl/: config.py  env.py  policy_iteration.py  value_iteration.py
planning/: CMakeLists.txt  README.md  README.rst  package.xml
planning/launch/: goal_pr2_wholebody.launch
planning/results/: ara.callgrind  ara.prof
planning/scripts/: feedback_linearization.m
planning/src/: call_planner.cpp
python/: abstract_class.py  closure.py  global.py  hydra_conf.yaml  mypy.py  pyhydra.py  pyray.py  pysacred.py  pytorch.py
tmp/: test_box2d.py
viz/src/: py_dot.py  tutorial1.py
webdev/: js_tutorial.html  socket_client.py  socket_server.py
